# pod-inspector

./: Cargo.toml  Dockerfile  Makefile  README.md
scripts/: build.sh  check.sh  run.sh
src/: auth.rs  in_memory_db.rs  main.rs  web_server.rs
src/api/: mod.rs  model.rs  presenter.rs  view.rs
static_html/: 404.html  login.html
