[package]
name = 'pod-inspector'
version = '0.1.0'
authors = ['Antonio Feitosa <antonio.cfc@gmail.com>']
edition = '2018'

[dependencies]
async-std = '1.5.0'
tide = '0.8.0'
time = "0.2.10"
mime = "0.3.16"
http-types = "1.2.0"

[dependencies.serde]
version = "1.0.106"
features = ["derive"]

[dependencies.cookie]
version = '0.13.3'
features = ['percent-encode']

[dependencies.uuid]
version = '0.8.1'
features = ['v1','v4']
